Arrumando Fontes e ajustando página de personalização

--- a/miniverse/html/personalizacao.html
+++ b/miniverse/html/personalizacao.html
@@ -165,7 +165,7 @@
 
                     <div class="preco-box">
                         <span>Valor estimado</span>
-                        <strong>R$ <span id="preco">0</span></strong>
+                        <strong>R$ <span id="preco" class="preco">0</span></strong>
                     </div>
 
                     <button type="button" id="btn-adicionar-carrinho" class="btn-principal">
