--- a/miniverse/html/personalizacao.html
+++ b/miniverse/html/personalizacao.html
@@ -20,14 +20,14 @@
                 <p class="miniverse">MINIVERSE</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    aria-expanded="false" aria-label="Toggle navigation" style="border-color: white;">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div style="margin-left: auto; margin-right: auto;  ">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" aria-current="page" href="/html/index.html">Home</a>
+                                <a class="nav-link a_li_header" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link a_li_header" href="/html/produtos.html">Produtos</a>
@@ -39,8 +39,7 @@
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
                                     <li><a class="dropdown-item a_li_header"
-                                            href="/html/produtos.html#marvel">Marvel</a>
-                                    </li>
+                                            href="/html/produtos.html#marvel">Marvel</a></li>
                                     <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dc">DC</a></li>
                                     <li><a class="dropdown-item a_li_header"
                                             href="/html/produtos.html#dragonball">Dragon
@@ -48,7 +47,8 @@
                                     <li><a class="dropdown-item a_li_header" href="/html/produtos.html#tlou">The Last of
                                             Us</a></li>
                                     <li><a class="dropdown-item a_li_header" href="/html/produtos.html#starwars">Star
-                                            Wars</a> </li>
+                                            Wars</a>
+                                    </li>
                                     <li><a class="dropdown-item a_li_header" href="/html/produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
@@ -57,8 +57,8 @@
                     </div>
                     <a href="/html/carrinho.html"><img src="../images/icon_carrinho.svg" class="d-flex"
                             style="width: 30px; margin-right: 20px;  filter: invert();"></a>
-                    <a href="/html/criarconta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
-                            src="../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
+                    <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="../images/icon_conta.svg"
+                            class="d-flex" style="width: 30px; filter: invert();"></a>
                 </div>
             </div>
         </nav>
@@ -154,6 +154,16 @@
                     <div class="campo">
                         <label>Imagem de referência</label>
                         <input type="file" id="imagem" class="form-control">
+                    </div>
+
+                    <div class="campo">
+                        <label>Descreva como você imagina sua miniatura</label>
+                        <textarea id="descricao" class="form-control descricao-area" rows="5" maxlength="500"
+                            placeholder="Ex: Quero a miniatura com pose dinâmica, espada levantada, base iluminada em azul e nome gravado em dourado...">
+  </textarea>
+                        <div class="contador-caracteres">
+                            <span id="contador">0</span>/500 caracteres
+                        </div>
                     </div>
 
                 </div>
