--- a/miniverse/html/personalizacao.html
+++ b/miniverse/html/personalizacao.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/personalizacao.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
 </head>
 
 <body>
