Arrumando cores dos textos

--- a/miniverse/html/dc/batman.html
+++ b/miniverse/html/dc/batman.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Batman</h1>
-                <p>Código: 2001</p>
+                <p class="cod_prod">Código: 2001</p>
 
                 <span class="badge badge-colecionavel">Promoção</span>
                 <span class="badge badge-dc">DC</span>
@@ -116,7 +116,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o Cavaleiro das Trevas para a sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Batman</strong> é uma homenagem fiel ao vigilante de Gotham City —
                 símbolo de justiça, estratégia e determinação.
@@ -126,7 +126,7 @@
                 cuidadosamente esculpido para capturar a essência sombria e poderosa do personagem.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 O processo de fabricação combina tecnologia moderna e arte manual.
                 Após a impressão em camadas ultrafinas (resolução de 0.1mm), cada miniatura passa por tratamento térmico
                 para maior durabilidade, seguida de polimento artesanal em múltiplas etapas.
@@ -135,7 +135,7 @@
                 detalhes da armadura.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 O traje tático do Batman apresenta textura realista de tecido e placas metálicas, simulando o visual das
                 versões mais modernas do herói.
