--- a/miniverse/html/dc/superman.html
+++ b/miniverse/html/dc/superman.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Superman</h1>
-                <p>Código: 2002</p>
+                <p class="cod_prod">Código: 2002</p>
 
                 <span class="badge badge-dc">DC</span>
                 <span class="badge badge-hero">Heroi</span>
@@ -114,7 +114,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o Homem de Aço para a sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Superman</strong> é uma homenagem fiel ao maior símbolo de esperança
                 do universo DC.
@@ -126,7 +126,7 @@
                 para capturar a presença inspiradora do protetor da Terra.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 O processo de fabricação combina tecnologia avançada e arte manual.
                 Após a impressão em camadas ultrafinas (resolução de 0.1mm), a miniatura é tratada termicamente para
                 aumentar a durabilidade
@@ -136,7 +136,7 @@
                 capa.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 O traje do Superman apresenta textura realista e musculatura definida, reproduzida com fidelidade à
                 anatomia do personagem.
