--- a/miniverse/html/dragonBall/piccolo.html
+++ b/miniverse/html/dragonBall/piccolo.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Piccolo</h1>
-                <p>Código: 3003</p>
+                <p class="cod_prod">Código: 3003</p>
 
                 <span class="badge badge-colecionavel">Promoção</span>
                 <span class="badge badge-db">Dragon Ball</span>
@@ -116,7 +116,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Adicione o guerreiro Namekuseijin à sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Piccolo</strong> é uma homenagem fiel ao lendário protetor da Terra
                 e mestre de Gohan.
@@ -126,7 +126,7 @@
                 esculpidos para capturar a essência do personagem de Dragon Ball Z.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 O processo de fabricação une inovação e arte manual.
                 Após a impressão em camadas ultrafinas (resolução de 0.1mm), cada miniatura é tratada termicamente para
                 máxima resistência e passa por um processo artesanal de lixamento e polimento em várias etapas.
@@ -135,7 +135,7 @@
                 do traje roxo e do manto branco.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 A peça destaca as texturas das roupas com dobras realistas e o semblante sereno — porém poderoso — de
                 Piccolo.
