--- a/miniverse/html/dragonBall/vegeta.html
+++ b/miniverse/html/dragonBall/vegeta.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Vegeta</h1>
-                <p>Código: 3002</p>
+                <p class="cod_prod">Código: 3002</p>
 
                 <span class="badge badge-db">Dragon Ball</span>
                 <span class="badge badge-hero">Heroi</span>
@@ -114,7 +114,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o orgulho do Príncipe dos Saiyajins para sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Vegeta</strong> é uma homenagem fiel ao icônico guerreiro de Dragon
                 Ball Z.
@@ -126,7 +126,7 @@
                 a força e o carisma do Príncipe dos Guerreiros.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 O processo de fabricação combina tecnologia de ponta com arte manual.
                 Após a impressão em camadas ultrafinas (resolução de 0.1mm), cada miniatura é tratada termicamente para
                 garantir máxima durabilidade
@@ -137,7 +137,7 @@
                 metálico da armadura.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 A armadura Saiyajin apresenta acabamento detalhado com texturas realistas e tonalidades metálicas.
                 As luvas e botas brancas possuem sombreamento sutil que realça o contraste com o traje.
