--- a/miniverse/html/marvel/capitaoAmerica.html
+++ b/miniverse/html/marvel/capitaoAmerica.html
@@ -88,7 +88,7 @@
       </div>
       <div class="informacoes">
         <h1>Capitão América</h1>
-        <p>Código: 1003</p>
+        <p class="cod_prod">Código: 1003</p>
 
         <span class="badge badge-premium">Marvel</span>
         <span class="badge badge-hero">Heroi</span>
@@ -114,14 +114,14 @@
 
     <div class="descricao">
       <h2>Descrição do Produto</h2>
-      <p>
+      <p class="desc_prod">
         <strong>Traga o espírito do Primeiro Vingador para sua coleção!</strong>
         Esta miniatura exclusiva do <strong>Capitão América</strong> é uma homenagem fiel ao lendário herói que
         simboliza
         coragem, honra e determinação. Produzida com tecnologia de impressão 3D de alta precisão, cada peça é
         cuidadosamente revisada para garantir qualidade e fidelidade aos detalhes do uniforme clássico de Steve Rogers.
       </p>
-      <p>
+      <p class="desc_prod">
         O processo de criação combina engenharia de ponta com acabamento artesanal. Após a impressão em camadas
         ultrafinas
         (resolução de 0.1mm), a peça é submetida a um processo de endurecimento térmico e polimento manual em múltiplas
@@ -130,7 +130,7 @@
         o
         azul, o vermelho e o branco da bandeira americana — com acabamento fosco e metálico em pontos estratégicos.
       </p>
-      <p>
+      <p class="desc_prod">
         <strong>Detalhes Imperdíveis:</strong> O traje apresenta o icônico escudo circular com efeito metálico e textura
         realista, preso ao braço esquerdo do herói.
         O uniforme traz costuras, placas e faixas minuciosamente reproduzidas, com destaque para o emblema estrelado no
