--- a/miniverse/html/seresMito/medusa.html
+++ b/miniverse/html/seresMito/medusa.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Medusa</h1>
-                <p>Código: 6003</p>
+                <p class="cod_prod">Código: 6003</p>
 
                 <span class="badge badge-colecionavel">Promoção</span>
                 <span class="badge badge-mito">Mitológico</span>
@@ -115,7 +115,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o poder e o mistério da mitologia grega para sua coleção!</strong>
                 Esta miniatura exclusiva da <strong>Medusa</strong> é uma peça impressionante que captura a essência da
                 lendária górgona — símbolo de força, beleza e maldição.
@@ -123,7 +123,7 @@
                 cada detalhe foi fielmente reproduzido para dar vida ao olhar petrificante da criatura mitológica.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 O processo de fabricação combina tecnologia moderna e arte clássica.
                 Após a impressão em camadas ultrafinas (resolução de 0.1mm),
                 cada peça passa por um cuidadoso tratamento térmico para garantir resistência e durabilidade.
@@ -133,7 +133,7 @@
                 hipnotizante.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 A miniatura retrata Medusa em pose imponente, com olhar fixo e expressão enigmática.
                 As serpentes em movimento parecem ganhar vida, e o pedestal em estilo grego traz inscrições inspiradas
