--- a/miniverse/html/seresMito/minotauro.html
+++ b/miniverse/html/seresMito/minotauro.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Minotauro</h1>
-                <p>Código: 6002</p>
+                <p class="cod_prod">Código: 6002</p>
 
                 <span class="badge badge-mito">Mitológico</span>
                 <span class="badge badge-detalhes">Detalhes Realistas</span>
@@ -113,7 +113,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o poder brutal do Labirinto de Creta para sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Minotauro</strong> representa a lendária criatura metade homem,
                 metade touro —
@@ -123,7 +123,7 @@
                 Minos.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 Produzida com tecnologia de impressão 3D de alta precisão (resolução de 0.1mm), a miniatura passa por um
                 processo
                 meticuloso de acabamento artesanal. Após o tratamento térmico, cada peça é lixada manualmente em
@@ -135,7 +135,7 @@
                 poderosa e vibrante que parece ganhar vida sob qualquer iluminação.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 O Minotauro está retratado em uma pose de ataque, empunhando seu machado duplo com expressão feroz e
                 postura
