--- a/miniverse/html/seresMito/zeus.html
+++ b/miniverse/html/seresMito/zeus.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Zeus</h1>
-                <p>Código: 6001</p>
+                <p class="cod_prod">Código: 6001</p>
 
                 <span class="badge badge-mito">Mitológico</span>
                 <span class="badge badge-detalhes">Detalhes Realistas</span>
@@ -113,7 +113,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o poder do Olimpo para sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Zeus</strong> representa o soberano dos deuses gregos em toda a sua
                 grandiosidade. Com expressão imponente e tridente reluzente, a peça captura a força e a sabedoria do
@@ -123,7 +123,7 @@
                 perfeição técnica e arte mitológica em uma réplica digna do trono do Olimpo.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 Cada miniatura é impressa em camadas ultrafinas (resolução de 0.1mm), garantindo riqueza de detalhes e
                 acabamento
                 impecável. Após a impressão, a peça passa por tratamento térmico para maior resistência, seguida de um
@@ -135,7 +135,7 @@
                 textura de tecido realista, enquanto o relâmpago em sua mão brilha com efeito luminescente.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 A miniatura retrata Zeus em posição de comando, empunhando um raio dourado sobre uma base inspirada no
                 Monte
