--- a/miniverse/html/starWars/darthVader.html
+++ b/miniverse/html/starWars/darthVader.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Darth Vader</h1>
-                <p>Código: 5001</p>
+                <p class="cod_prod">Código: 5001</p>
 
                 <span class="badge badge-Star">Star Wars</span>
                 <span class="badge badge-vilao">Vilão</span>
@@ -114,7 +114,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o Lado Sombrio da Força para sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Darth Vader</strong> é uma homenagem fiel ao lendário Lorde Sith,
                 símbolo máximo do poder, da disciplina e da dualidade entre luz e escuridão.
@@ -122,7 +122,7 @@
                 resultando em uma peça que transmite imponência e respeito — digna de qualquer fã da saga *Star Wars*.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 Produzida com tecnologia de impressão 3D de última geração (resolução de 0.1mm),
                 cada miniatura passa por tratamento térmico para garantir resistência e estabilidade.
                 Em seguida, o acabamento é feito manualmente: lixamento em várias etapas, aplicação de tinta acrílica
@@ -133,7 +133,7 @@
                 — simulando o visual metálico e misterioso da armadura original.
             </p>
 
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong>
                 A miniatura retrata Darth Vader empunhando seu sabre de luz vermelho translúcido,
                 com a capa esvoaçante e postura de combate. O capacete apresenta pintura preta com
