--- a/miniverse/html/dragonBall/goku.html
+++ b/miniverse/html/dragonBall/goku.html
@@ -88,7 +88,7 @@
       </div>
       <div class="informacoes">
         <h1>Goku</h1>
-        <p>Código: 3001</p>
+        <p class="cod_prod">Código: 3001</p>
 
         <span class="badge badge-db">Dragon Ball</span>
         <span class="badge badge-hero">Heroi</span>
@@ -114,7 +114,7 @@
 
     <div class="descricao">
       <h2>Descrição do Produto</h2>
-      <p>
+      <p class="desc_prod">
         <strong>Desperte o poder dos guerreiros Saiyajins em sua coleção!</strong>
         Esta miniatura exclusiva do <strong>Goku</strong> é uma homenagem fiel ao lendário herói de Dragon Ball Z.
         Representando o personagem em sua forma clássica, com o icônico uniforme laranja e azul, a peça captura toda a
@@ -123,7 +123,7 @@
         garantir uma reprodução realista e impactante.
       </p>
 
-      <p>
+      <p class="desc_prod">
         O processo de fabricação combina engenharia moderna com arte manual.
         Após a impressão em camadas ultrafinas (resolução de 0.1mm), cada peça é tratada termicamente para maior
         resistência e passa por polimento manual em múltiplas etapas.
@@ -132,7 +132,7 @@
         das botas.
       </p>
 
-      <p>
+      <p class="desc_prod">
         <strong>Detalhes Imperdíveis:</strong> O traje apresenta texturas realistas de tecido e dobras naturais, além do
         símbolo do Mestre Kame fielmente reproduzido nas costas e no peito.
         Os cabelos em estilo Super Saiyajin (ou versão clássica, dependendo do modelo) recebem acabamento brilhante com
