--- a/miniverse/html/marvel/homemAranha.html
+++ b/miniverse/html/marvel/homemAranha.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Homem-Aranha</h1>
-                <p>Código: 1001</p>
+                <p class="cod_prod">Código: 1001</p>
 
                 <span class="badge badge-colecionavel">Promoção</span>
                 <span class="badge badge-premium">Marvel</span>
@@ -116,7 +116,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga o herói mais ágil de Nova York para sua coleção!</strong>
                 Esta miniatura exclusiva do <strong>Homem-Aranha</strong> é uma representação incrível do herói
                 aracnídeo em toda sua glória. Inspirada no traje clássico de Peter Parker, ela combina design moderno
@@ -124,7 +124,7 @@
                 impressão 3D de última geração, cada peça é inspecionada individualmente para garantir qualidade
                 superior.
             </p>
-            <p>
+            <p class="desc_prod">
                 O processo de fabricação une inovação e arte manual. Após a impressão em camadas ultrafinas (resolução
                 de 0.1mm), cada miniatura passa por um processo de tratamento térmico para resistência e polimento em
                 múltiplas etapas.
@@ -132,7 +132,7 @@
                 verniz protetor UV, garantindo que o vermelho e o azul vibrantes do traje permaneçam intensos por muitos
                 anos.
             </p>
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong> O traje apresenta o icônico padrão de teias em relevo sobre o
                 uniforme azul e vermelho, com o símbolo da aranha pintado em preto no peito.
                 A pose dinâmica mostra o herói em pleno movimento, pronto para lançar sua teia — um retrato fiel da
