--- a/miniverse/html/marvel/homemFerro.html
+++ b/miniverse/html/marvel/homemFerro.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="../../css/styleProd.css">
-  <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
+  <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
   <!-- Link para o CSS do Select2 -->
   <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
 
@@ -88,7 +88,7 @@
       </div>
       <div class="informacoes">
         <h1>Homem de Ferro</h1>
-        <p>Código: 1002</p>
+        <p class="cod_prod">Código: 1002</p>
 
         <span class="badge badge-premium">Marvel</span>
         <span class="badge badge-hero">Heroi</span>
@@ -114,19 +114,19 @@
 
     <div class="descricao">
       <h2>Descrição do Produto</h2>
-      <p>
+      <p class="desc_prod">
         <strong>Traga o poder da Stark Industries para sua coleção!</strong> Esta miniatura exclusiva do Homem de Ferro
         (Mark VII) é uma réplica impressionante do icônico traje do gênio bilionário Tony Stark. Produzida com
         tecnologia
         de impressão 3D de última geração, cada peça passa por rigoroso controle de qualidade.
       </p>
-      <p>
+      <p class="desc_prod">
         O processo de fabricação combina precisão tecnológica com arte tradicional. Após a impressão em camadas
         ultrafinas (resolução de 0.1mm), cada miniatura recebe tratamento térmico para maior resistência, seguido
         de lixamento manual em 3 etapas diferentes. A pintura é aplicada à mão por artistas especializados,
         utilizando tintas acrílicas de alta cobertura com proteção UV, garantindo cores vibrantes que não desbotam.
       </p>
-      <p>
+      <p class="desc_prod">
         <strong>Detalhes Imperdíveis:</strong> O traje apresenta o clássico padrão vermelho e dourado, com acabamento
         metálico realista. O reator arc no peito possui textura diferenciada com efeito luminescente (brilha no
         escuro!).
