--- a/miniverse/html/personalizacao.html
+++ b/miniverse/html/personalizacao.html
@@ -10,6 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
+
+    <!-- Fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bungee&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -159,9 +166,15 @@
 
                     <div class="campo">
                         <label>Descreva como você imagina sua miniatura</label>
+
                         <textarea id="descricao" class="form-control descricao-area" rows="5" maxlength="500"
-                            placeholder="Ex: Quero a miniatura com pose dinâmica, espada levantada, base iluminada em azul e nome gravado em dourado...">
+                            placeholder="Digite aqui sua ideia...">
   </textarea>
+
+                        <div class="mensagem-ajuda" id="mensagemAjuda">
+                            Quanto mais detalhes você descrever, melhor será o resultado final da sua miniatura.
+                        </div>
+
                         <div class="contador-caracteres">
                             <span id="contador">0</span>/500 caracteres
                         </div>
@@ -382,6 +395,35 @@
             @keyframes slideIn { from { transform: translateX(400px); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
         `;
         document.head.appendChild(style);
+
+
+        document.addEventListener("DOMContentLoaded", function () {
+
+            const textarea = document.getElementById('descricao');
+            const contador = document.getElementById('contador');
+            const mensagemAjuda = document.getElementById('mensagemAjuda');
+
+            // Força estado inicial correto
+            contador.textContent = 0;
+            mensagemAjuda.style.opacity = "1";
+
+            textarea.addEventListener('input', function () {
+
+                const tamanhoTexto = textarea.value.length;
+
+                // Atualiza contador
+                contador.textContent = tamanhoTexto;
+
+                // Mostra ou esconde mensagem
+                if (tamanhoTexto > 0) {
+                    mensagemAjuda.style.opacity = "0";
+                } else {
+                    mensagemAjuda.style.opacity = "1";
+                }
+
+            });
+
+        });
     </script>
 </body>
 
