--- a/miniverse/html/produtos_halloween/pennywise.html
+++ b/miniverse/html/produtos_halloween/pennywise.html
@@ -78,16 +78,16 @@
         </nav>
     </header>
 
-    <div class="quadrado">
-        <div class="rota">Início > Eventos > Outubro > Halloween > Pennywise</div>
+    <div class="quadrado_halloween">
+        <div class="rota_halloween">Início > Eventos > Outubro > Halloween > Pennywise</div>
 
         <div class="produto">
             <div class="galeria">
                 <img src="../../images/evento_sazonal/pennywise_halloween.png" alt="Pennywise">
             </div>
             <div class="informacoes">
-                <h1>Pennywise</h1>
-                <p>Código: 9103</p>
+                <h1 class="h1_halloween">Pennywise</h1>
+                <p class="cod_halloween">Código: 9103</p>
 
                 <span class="badge badge-Limitado">Edição Limitada</span>
                 <span class="badge badge-eventos">Sazonal</span>
@@ -97,11 +97,11 @@
                 <span class="badge badge-pintura">Pintura a mão</span>
 
                 <div class="pix">R$ 549,90 no Pix</div>
-                <div class="juros">ou 6x de R$ 100,00 sem juros</div>
+                <div class="juros_halloween">ou 6x de R$ 100,00 sem juros</div>
 
                 <div class="secao-compra">
                     <div class="Quantidade">
-                        <h1>Quantidade:</h1>
+                        <h1 class="qtd_halloween">Quantidade:</h1>
                         <select class="form-select select_quantidade" aria-label="Default select example">
                             <option selected="1">1</option>
                             <option value="2">2</option>
