--- a/miniverse/html/starWars/leia.html
+++ b/miniverse/html/starWars/leia.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Leia</h1>
-                <p>Código: 5003</p>
+                <p class="cod_prod">Código: 5003</p>
 
                 <span class="badge badge-colecionavel">Promoção</span>
                 <span class="badge badge-Star">Star Wars</span>
@@ -116,7 +116,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga a força e a coragem da Aliança Rebelde para sua coleção!</strong>
                 Esta miniatura exclusiva da <strong>Princesa Leia Organa</strong> é uma homenagem fiel à heroína mais
                 icônica da galáxia de
@@ -124,7 +124,7 @@
                 contra o Império com
                 bravura e esperança — tornando-se símbolo eterno de resistência.
             </p>
-            <p>
+            <p class="desc_prod">
                 Produzida com tecnologia de impressão 3D de alta precisão, cada peça é confeccionada em camadas
                 ultrafinas (resolução de 0.1mm)
                 e passa por um rigoroso processo de acabamento artesanal. Após a impressão, a miniatura recebe lixamento
@@ -133,7 +133,7 @@
                 proteção UV para preservar
                 as cores vibrantes por muitos anos.
             </p>
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong> O traje clássico branco, os icônicos coques laterais e o blaster
                 da Rebelião foram
                 reproduzidos com extrema fidelidade. A expressão determinada e a postura firme refletem o poder e a
