--- a/miniverse/html/starWars/yoda.html
+++ b/miniverse/html/starWars/yoda.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Yoda</h1>
-                <p>Código: 5002</p>
+                <p class="cod_prod">Código: 5002</p>
 
                 <span class="badge badge-Star">Star Wars</span>
                 <span class="badge badge-hero">Heroi</span>
@@ -114,7 +114,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga a sabedoria milenar dos Cavaleiros Jedi para sua coleção!</strong>
                 Esta miniatura exclusiva do lendário <strong>Mestre Yoda</strong> é uma homenagem fiel a um dos
                 personagens
@@ -122,7 +122,7 @@
                 equilíbrio,
                 conhecimento e conexão profunda com a Força — um verdadeiro guia para toda a galáxia.
             </p>
-            <p>
+            <p class="desc_prod">
                 Produzida com tecnologia de impressão 3D de alta precisão, cada peça é confeccionada em camadas
                 ultrafinas
                 (resolução de 0.1mm) e passa por um minucioso processo de acabamento artesanal. Após a impressão, a
@@ -131,7 +131,7 @@
                 alta
                 cobertura e proteção UV, garantindo cores vivas e durabilidade excepcional.
             </p>
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong> O manto Jedi esculpido com realismo, o cajado clássico e o olhar
                 sereno de
                 Yoda foram reproduzidos com fidelidade impressionante. Sua expressão transmite sabedoria e serenidade —
