--- a/miniverse/html/tlou/abby.html
+++ b/miniverse/html/tlou/abby.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Abby</h1>
-                <p>Código: 4002</p>
+                <p class="cod_prod">Código: 4002</p>
 
                 <span class="badge badge-colecionavel">Promoção</span>
                 <span class="badge badge-tlou">The Last Of Us</span>
@@ -116,7 +116,7 @@
 
         <div class="descricao">
             <h2>Descrição do Produto</h2>
-            <p>
+            <p class="desc_prod">
                 <strong>Traga a força e a intensidade do universo pós-apocalíptico de The Last of Us para sua
                     coleção!</strong>
                 Esta miniatura exclusiva de <strong>Abby Anderson</strong> é uma homenagem fiel a uma das personagens
@@ -125,7 +125,7 @@
                 profundidade
                 emocional, Abby representa o equilíbrio entre vingança e redenção em um mundo devastado pela infecção.
             </p>
-            <p>
+            <p class="desc_prod">
                 Produzida com tecnologia de impressão 3D de alta precisão, cada miniatura é confeccionada em camadas
                 ultrafinas
                 (resolução de 0.1mm) e passa por um rigoroso processo de acabamento artesanal. Após a impressão, a peça
@@ -134,7 +134,7 @@
                 de alta
                 qualidade com acabamento fosco e proteção UV — garantindo durabilidade e realismo impressionante.
             </p>
-            <p>
+            <p class="desc_prod">
                 <strong>Detalhes Imperdíveis:</strong> O visual musculoso e o traje tático de Abby foram reproduzidos
                 com fidelidade
                 total. Cada detalhe — da textura da regata e mochila até o semblante determinado — transmite a força e a
