--- a/miniverse/html/tlou/joel.html
+++ b/miniverse/html/tlou/joel.html
@@ -88,7 +88,7 @@
             </div>
             <div class="informacoes">
                 <h1>Joel</h1>
-                <p>Código: 4001</p>
+                <p class="cod_prod">Código: 4001</p>
 
                 <span class="badge badge-tlou">The Last Of Us</span>
                 <span class="badge badge-apocalipse">Apocalipse</span>
