--- a/miniverse/html/carrinho.html
+++ b/miniverse/html/carrinho.html
@@ -108,7 +108,7 @@
                         </b>
                     </div>
                 </div>
-                <div style="margin-top: 3%;">
+                <div style="margin-top: 3%; color: #ffffff;">
                     <div style="font-size: 2.5vh;">
                         <p>Método de pagamento:</p>
                     </div>
